cabal-version:       2.2

name:                language-gemini
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@fgaz.me
-- copyright:
category:            Text, Gemini
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.Gemini
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , text
  -- hs-source-dirs:
  default-language:    Haskell2010

